hphp/hack/test/typecheck/no_unset_in_strict_mode.php.exp
File "no_unset_in_strict_mode.php", line 5, characters 3-11:
In strict mode, unset is banned except on array indexing (Typing[4135])
