hphp/hack/test/typecheck/no_unset_in_strict_mode.php
<?hh // strict

function f(): void {
  $a = "hello";
  unset($a);
}
